--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div>hola</div>
-    <div>HOLA</div>
+    <h1>Aprendiendo css grid Layout</h1>
+    <div class="grib layout">
+        <div class="class cajas">Caja 1</div>
+        <div class="class cajas">Caja 2</div>
+        <div class="class cajas">Caja 3</div>
+        <div class="class cajas">Caja 4</div>
+        <div class="class cajas">Caja 5</div>
+        <div class="class cajas">Caja 6</div>
+        <div class="class cajas">Caja 7</div>
+        <div class="class cajas">Caja 8</div>
+        <div class="class cajas">Caja 9</div>
+        <div class="class cajas">Caja 10</div>
+
+
+    </div>
 </body>
 
 </html>
