--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
 <body>
     <h1>Aprendiendo css grid Layout</h1>
-    <div class="grib layout">
-        <div class="class cajas">Caja 1</div>
-        <div class="class cajas">Caja 2</div>
-        <div class="class cajas">Caja 3</div>
-        <div class="class cajas">Caja 4</div>
-        <div class="class cajas">Caja 5</div>
-        <div class="class cajas">Caja 6</div>
-        <div class="class cajas">Caja 7</div>
-        <div class="class cajas">Caja 8</div>
-        <div class="class cajas">Caja 9</div>
-        <div class="class cajas">Caja 10</div>
-
-
+    <div class="grib-layout">
+        <div class="cajas C1">Caja 1</div>
+        <div class="cajas C2">Caja 2</div>
+        <div class="cajas C3">Caja 3</div>
+        <div class="cajas C4">Caja 4</div>
+        <div class="cajas C5">Caja 5</div>
+        <div class="cajas C6">Caja 6</div>
+        <div class="cajas C7">Caja 7</div>
+        <div class="cajas C8">Caja 8</div>
+        <div class="cajas C9">Caja 9</div>
+        <div class="cajas C10">Caja 10</div>
+        <div class="cajas C11">Caja 11</div>
+        <div class="cajas C12">Caja 12</div>
     </div>
 </body>
 
